Autosize should use documentRect height instead of scrollHeight https://bugs.webkit.org/show_bug.cgi?id=112770

Reviewed by David Levin.

Autosizing fails to compute the correct height if the root element is very
small but the document has significant overflow.

No new tests; autosizing is not currently exposed in a testable way on Mac.

* page/FrameView.cpp:
(WebCore::FrameView::autoSizeIfEnabled):


Canonical link: https://commits.webkit.org/131160@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@146373 268f45cc-cd09-0410-ab3c-d52691b4dbfc